[package]
name = "cargo-sphinx"
version = "1.1.0"
authors = ["Ning Sun <sunng@about.me>", "Pascal Hartig <i@passy.me>", "Daithi O Crualaoich <daithi.ocrualaoich@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Cargo subcommand for building and publishing Sphinx documentation to GitHub Pages."

homepage = "https://woofwoofinc.github.io/cargo-sphinx"
documentation = "https://docs.rs/crate/cargo-sphinx"
repository = "https://github.com/woofwoofinc/cargo-sphinx"
readme = "README.md"

keywords = ["cargo", "documentation", "github", "sphinx"]

include = [
    "src/*",
    "AUTHORS",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
]

[dependencies]
toml = "0.4.5"
quick-error = "1.2.1"
clap = "2.26.2"
cargo = "0.20.0"
term = "0.4.6"

[package.metadata.sphinx]
docs-path = "docs"
commit-message = "(cargo-sphinx) Generate docs."
sign-commit = false
push-remote = "origin"
push-branch = "gh-pages"
